// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AudioTracks > when audio tracks are available > should render menu 1`] = `
"<button class="gcore-skin-button-color media-control-dd" id="gplayer-audiotracks-button" aria-haspopup="menu" aria-expanded="false">
    <span class="media-control-dd__text" id="gplayer-audiotracks-button-text"></span>
    <span class="media-control-dd__arrow">/assets/icons/old/quality-arrow.svg</span>
</button>
<ul class="gcore-skin-bg-color menu media-control-dd__popup" id="gplayer-audiotracks-menu" role="menu" style="display: none;">
    
        <li class="">
            <a href="#" class="gcore-skin-text-color" data-item="1" role="menuitemradio" aria-checked="false">
                English
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gcore-skin-text-color" data-item="2" role="menuitemradio" aria-checked="false">
                Spanish
            </a>
        </li>
    
</ul>
"
`;

exports[`AudioTracks > when audio tracks are available > when button is clicked > should show menu 1`] = `
"<button class="gcore-skin-button-color media-control-dd" id="gplayer-audiotracks-button" aria-haspopup="menu" aria-expanded="true">
    <span class="media-control-dd__text" id="gplayer-audiotracks-button-text"></span>
    <span class="media-control-dd__arrow">/assets/icons/old/quality-arrow.svg</span>
</button>
<ul class="gcore-skin-bg-color menu media-control-dd__popup" id="gplayer-audiotracks-menu" role="menu">
    
        <li class="">
            <a href="#" class="gcore-skin-text-color" data-item="1" role="menuitemradio" aria-checked="false">
                English
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gcore-skin-text-color" data-item="2" role="menuitemradio" aria-checked="false">
                Spanish
            </a>
        </li>
    
</ul>
"
`;

exports[`AudioTracks > when audio tracks are available > when button is clicked > when audio track is selected > should hide the menu 1`] = `
"<button class="gcore-skin-button-color media-control-dd changing" id="gplayer-audiotracks-button" aria-haspopup="menu" aria-expanded="false">
    <span class="media-control-dd__text" id="gplayer-audiotracks-button-text"></span>
    <span class="media-control-dd__arrow">/assets/icons/old/quality-arrow.svg</span>
</button>
<ul class="gcore-skin-bg-color menu media-control-dd__popup" id="gplayer-audiotracks-menu" role="menu" style="display: none;">
    
        <li class="">
            <a href="#" class="gcore-skin-text-color" data-item="1" role="menuitemradio" aria-checked="false">
                English
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gcore-skin-text-color" data-item="2" role="menuitemradio" aria-checked="false">
                Spanish
            </a>
        </li>
    
</ul>
"
`;
